# skill-manager

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clawhub.rs  commands.rs  github_import.rs  installer.rs  lib.rs  provider.rs  repo.rs  scanner.rs  skill.rs
src/components/: add-repo-dialog.tsx  confirm-dialog.tsx  directory-tree.tsx  empty-state.tsx  file-viewer.tsx  market-clawhub.tsx  market-create.tsx  market-github.tsx  market-repos.tsx  sidebar.tsx  skill-list-item.tsx  skill-preview.tsx
src/components/ui/: dropdown-menu.tsx
src/hooks/: use-repos.ts  use-settings.ts  use-skills.ts
src/lib/: commands.ts  types.ts
src/views/: local-view.tsx  market-view.tsx  settings-view.tsx  skill-detail-view.tsx
