[package]
name = "app"
version = "0.1.0"
description = "跨 provider 的 Agent Skills 桌面管理器"
authors = ["TopGrd"]
license = "MIT"
repository = "https://github.com/TopGrd/skill-manager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
time = "=0.3.51"
dirs = "6"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
zip = "2"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
